--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -29,24 +29,31 @@
 
 
     <div class="gallery">
-      <figure>
-        <a target="_blank" href="../images/image1.jpg"><img src="../images/image1.jpg" alt="Professionals at work"></a>
-        <figcaption><a target="_blank" href="../images/image1.jpg">Professionals at work</a></figcaption>
-      </figure>
+      <div class="containergallery">
+        <figure>
+          <a target="_blank" href="../images/image1.jpg"><img src="../images/image1.jpg"
+              alt="Professionals at work"></a>
+          <figcaption><a target="_blank" href="../images/image1.jpg">Professionals at work</a></figcaption>
+        </figure>
+      </div>
     </div>
 
     <div class="gallery">
-      <figure>
-        <a target="_blank" href="../images/image2.jpg"><img src="../images/image2.jpg" alt="Healthy skin"></a>
-        <figcaption><a target="_blank" href="../images/image2.jpg">Healthy skin</a></figcaption>
-      </figure>
+      <div class="containergallery">
+        <figure>
+          <a target="_blank" href="../images/image2.jpg"><img src="../images/image2.jpg" alt="Healthy skin"></a>
+          <figcaption><a target="_blank" href="../images/image2.jpg">Healthy skin</a></figcaption>
+        </figure>
+      </div>
     </div>
 
     <div class="gallery">
-      <figure>
-        <a target="_blank" href="../images/image3.jpg"><img src="../images/image3.jpg" alt="Serums and creams"></a>
-        <figcaption><a target="_blank" href="../images/image3.jpg">Products we offer for best results</a></figcaption>
-      </figure>
+      <div class="containergallery">
+        <figure>
+          <a target="_blank" href="../images/image3.jpg"><img src="../images/image3.jpg" alt="Serums and creams"></a>
+          <figcaption><a target="_blank" href="../images/image3.jpg">Products we offer for best results</a></figcaption>
+        </figure>
+      </div>
     </div>
 
     <footer>
